# token-guard

./: .gitignore  .npmignore  Anchor.toml  README.md  package.json  tsconfig.json
.github/workflows/: solana-rust.yml  solana-ts.yml  test.yml
programs/dummy-spender/: Cargo.toml
programs/dummy-spender/src/: lib.rs  utils.rs
programs/token-guard/: Cargo.toml
programs/token-guard/src/: guard_utils.rs  lib.rs  nft_utils.rs  token_utils.rs  utils.rs
scripts/: setup.ts
src/: index.ts
src/commands/: create.ts
src/lib/: exchange.ts  initialize.ts  util.ts
src/lib/cli/: flags.ts  utils.ts
tests/: token-guard.ts
tests/fixtures/: dummyMetadata.json
tests/util/: exchange.ts
